# OpenGeodeWeb-Back

./: .gitattributes  .gitignore  .pypirc  CHANGELOG.md  COPYLEFT  README.md  app.py  config.py  functions.py  generate_schemas.js  geode_functions.py  geode_objects.py  mypy.ini  opengeodeweb-back.spec  opengeodeweb_back_schemas.json  output.og_tsf3d  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-internal.txt  requirements.in  requirements.txt  schemas.json
.github/workflows/: CD.yml  CICD.yml  deploy.yml  merge_request.yml  test.yml  test_pr.yml
src/OpenGeodeWeb-Back/: pyproject.toml
src/opengeodeweb_back/: app.py  app_config.py  data.py  database.py  geode_functions copy.py  geode_functions.py  geode_objects.py  inspector_functions.py  models.py  test_utils.py  utils_functions.py
src/opengeodeweb_back/geode_objects/: __init__.py  geode_brep.py  geode_cross_section.py  geode_edged_curve2d.py  geode_edged_curve3d.py  geode_graph.py  geode_grid2d.py  geode_grid3d.py  geode_horizon_stack3d.py  geode_hybrid_solid3d.py  geode_implicit_cross_section.py  geode_implicit_structural_model.py  geode_light_regular_grid2d.py  geode_light_regular_grid3d.py  geode_mesh.py  geode_model.py  geode_object.py  geode_point_set2d.py  geode_point_set3d.py  geode_polygonal_surface2d.py  geode_polygonal_surface3d.py  geode_polyhedral_solid3d.py  geode_raster_image2d.py  geode_raster_image3d.py  geode_regular_grid2d.py  geode_regular_grid3d.py  geode_regulard_grid2d.py  geode_regulard_grid3d.py  geode_section.py  geode_solid_mesh3d.py  geode_structural_model.py  geode_surface_mesh2d.py  geode_surface_mesh3d.py  geode_tetrahedral_solid3d.py  geode_triangulated_surface2d.py  geode_triangulated_surface3d.py  geode_vertex_set.py  types.py
src/opengeodeweb_back/routes/: blueprint_routes.py
src/opengeodeweb_back/routes/create/: blueprint_create.py
src/opengeodeweb_back/routes/models/: blueprint_models.py
src/opengeodeweb_back/routes/schemas/: __init__.py  allowed_files.json  allowed_files.py  allowed_objects.json  allowed_objects.py  cell_attribute_names.json  cell_attribute_names.py  create_point.json  edge_attribute_names.json  edge_attribute_names.py  export_project.json  export_project.py  geode_object_inheritance.json  geode_object_inheritance.py  geode_objects_and_output_extensions.json  geode_objects_and_output_extensions.py  geographic_coordinate_systems.json  geographic_coordinate_systems.py  import_extension.json  import_extension.py  import_project.json  import_project.py  inspect_file.json  inspect_file.py  kill.json  kill.py  missing_files.json  missing_files.py  (+34 more)
src/tests/: conftest.py  test_routes.py  test_utils_functions.py
src/tests/data/: test.dev  test.ml  test.og_img3d  test.og_istrm  test.og_lrgd3d  test.smesh  test.wl
tests/: conftest.py  test_create_routes.py  test_functions.py  test_geode_functions.py  test_models_routes.py  test_routes.py  test_utils_functions.py
tests/data/: LS2.og_brep  cube.vtm  test.csv  test.csv.json  test.grdecl  test.og_hso3d  test.og_hst3d  test.og_img2d  test.og_ixsctn  test.og_lrgd2d  test.og_psf2d  test.og_pso3d  test.og_pts2d  test.og_pts3d  test.og_tso3d  test.og_vts  test.og_xsctn  test.pl  test.ply  test.shz  test.txt  test.vti
(+24 files in other folders)
