[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "OpenGeodeWeb-Back"
version = "0.0.1"
authors = [
  { name="Geode-solutions", email="contact@geode-solutions.com" },
]
description = "Open source library of python functions and OpenGeode wrappers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Geode-solutions/OpenGeodeWeb-Back"
"Bug Tracker" = "https://github.com/Geode-solutions/OpenGeodeWeb-Back/issues"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.semantic_release.branches]
version_variable = "pyproject.toml:version"
version_source = "tag"
branch = "master"

[tool.semantic_release.branches]
version_variable = "pyproject.toml:version"
version_source = "tag"
branch = "next"
prerelease_tag = "rc"